# crypto-trading-system

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  check-pr-title.yml
config/: config.json.template
integration_test/clients/okx/: okx_integration_test.cpp
scripts/: archive.sh  deploy.sh  format.sh  install-hooks.sh  pre-commit  run.sh  start.sh  stop.sh
sdk/: CMakeLists.txt  cmake.install
sdk/include/: defs.hpp  log.hpp  position_manager.hpp  ring_shm.hpp  strategy.hpp  strategy_registry.hpp  utils.hpp
sdk/src/: instrument_registry.cpp  log.cpp  position_manager.cpp  strategy.cpp  strategy_registry.cpp
src/: main.cpp
src/client/okx/: okx_client.cpp
src/clients/: exchange_client.cpp  exchange_client.hpp
src/clients/okx/: okx.cpp  okx.hpp
src/common/: config.hpp  cpu_affinity.hpp  defs.hpp  https.hpp  logger.hpp  quotation.hpp  ring_shm.hpp  trading.hpp  utils.hpp  websocket.hpp
src/include/client/okx/: okx_client.hpp
src/include/common/: config.hpp  logger.hpp  ring_shm.hpp  types.hpp
src/market_engine/: main.cpp
src/quotation_engine/: quotation_engine.cpp  quotation_engine.hpp
src/quote_engine/: main.cpp
src/strategy_engine/: main.cpp  mesh.cpp  mesh.hpp  multi_mesh.cpp  multi_mesh.hpp  plugin_loader.cpp  plugin_loader.hpp  strategy.cpp  strategy.hpp  strategy_engine.cpp  strategy_engine.hpp  strategy_registry.hpp
src/strategy_engine/multi_mesh/: multi_mesh.cpp  multi_mesh.hpp
src/trading_engine/: main.cpp  position_manager.cpp  position_manager.hpp  trading_engine.cpp  trading_engine.hpp
